# OpenTRIM

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  TODO.md
cmake/: Externals.cmake  HelperFunctions.cmake
dedx/: Ac.cpp  Ag.cpp  Al.cpp  Ar.cpp  As.cpp  At.cpp  Au.cpp  B.cpp  Ba.cpp  Be.cpp  Bi.cpp  Br.cpp  C.cpp  Ca.cpp  Cd.cpp  Ce.cpp  Cl.cpp  Co.cpp  Cr.cpp  Cs.cpp  Cu.cpp  Dy.cpp  Er.cpp  Eu.cpp  F.cpp  Fe.cpp  Fr.cpp  Ga.cpp  Gd.cpp  Ge.cpp  H.cpp  He.cpp  Hf.cpp  Hg.cpp  Ho.cpp  I.cpp  In.cpp  Ir.cpp  K.cpp  Kr.cpp  (+53 more)
doc/: CMakeLists.txt  DoxygenLayout.xml  FlightPath.md  ScreenedCoulomb.md  iradina++.dox  main.md  opentrim.dox  physics.md  userdoc.md
iradina/: CMakeLists.txt  fileio.c  fileio.h  fromcorteo.c  fromcorteo.h  geometry.c  geometry.h  history.txt  indexvalues.h  indexvalues6bit.h  iradina.c  iradina.h  makefile  target.c  target.h  test.c  transport.c  transport.h  utils.c  utils.h
iradina++/: CMakeLists.txt  arrays.h  corteo.cpp  corteo.h  corteo4bit.h  corteo6bit.h  dedx.cpp  dedx.h  elements.cpp  elements.h  event_recorder.cpp  event_recorder.h  event_stream.cpp  event_stream.h  gencorteo.cpp  gendedx.cpp  geometry.h  ion.cpp  ion.h  ion_beam.cpp  ion_beam.h  ion_queues.h  iradina.cpp  mccore.cpp  mccore.h  mcdriver.cpp  mcdriver.h  options.cpp  options.h  out_file.cpp  out_file.h  parse_ini.cpp  parse_json.cpp  parser.cpp  play_ground.cpp  random_vars.cpp  random_vars.h  settings.cpp  settings.h  simulation.cpp  (+10 more)
iradina/geometries/NP/: geometry.c  geometry.c~  geometry.h  geometry.h~
iradina/geometries/nanowire/: geometry.c  geometry.c~  geometry.h  geometry.h~
octave/: FeinFe_dedx.m  corteo_xs.cpp  dedx.cpp  findS.m  make_oct_bindings.m  mfp_H_He_in_C.m  minApproach.m  plot_b1.m  plot_b6.m  plot_b7.m  plot_benchmark.m  screened_coulomb_ip.cpp  screened_coulomb_sn.cpp  screened_coulomb_theta.cpp  screened_coulomb_theta.m  screened_coulomb_xs.cpp  test_dedx.m  test_xs.m  tst_iradpp.m  tst_pka.m
source/: main.cpp
source/dedx/: Ac.cpp  Ag.cpp  Al.cpp  Ar.cpp  As.cpp  At.cpp  Au.cpp  B.cpp  Ba.cpp  Be.cpp  Bi.cpp  Br.cpp  C.cpp  Ca.cpp  Cd.cpp  Ce.cpp  Cl.cpp  Co.cpp  Cr.cpp  Cs.cpp  Cu.cpp  Dy.cpp  Er.cpp  Eu.cpp  F.cpp  Fe.cpp  Fr.cpp  Ga.cpp  Gd.cpp  Ge.cpp  H.cpp  He.cpp  Hf.cpp  Hg.cpp  Ho.cpp  I.cpp  In.cpp  Ir.cpp  K.cpp  Kr.cpp  (+54 more)
source/gui/: CMakeLists.txt  error_fmt.h  floatlineedit.cpp  floatlineedit.h  main.cpp  mainui.cpp  mainui.h  materialsdefview.cpp  materialsdefview.h  mcdriverobj.cpp  mcdriverobj.h  mydatawidgetmapper.cpp  mydatawidgetmapper.h  optionsmodel.cpp  optionsmodel.h  periodictablewidget.cpp  periodictablewidget.h  regionsview.cpp  regionsview.h  resultsview.cpp  resultsview.h  runview.cpp  runview.h  simcontrolwidget.cpp  simcontrolwidget.h  simulationoptionsview.cpp  simulationoptionsview.h  welcomeview.cpp  welcomeview.h
source/gui/examples/: 3MeV_Xe_on_UO2.json
source/gui/jsedit/: jsedit.cpp  jsedit.h
source/gui/option_def/: options.json
source/gui/styles/: default.qss
source/include/: arrays.h  cascade_queue.h  corteo.h  corteo_xs.h  dedx.h  dedx_calc.h  event_stream.h  flight_path_calc.h  geometry.h  ion.h  ion_beam.h  json_defs_p.h  mccore.h  mcdriver.h  periodic_table.h  random_vars.h  tally.h  target.h  xs.h
source/src/: dedx.cpp  dedx_calc.cpp  event_stream.cpp  flight_path_calc.cpp  gencorteo.cpp  gendedx.cpp  genptable.cpp  h5serialize.cpp  ion.cpp  ion_beam.cpp  mccore.cpp  mcdriver.cpp  parse_json.cpp  play_ground.cpp  straggling.cpp  tally.cpp  target.cpp
src/: arrays.h  cascade_queue.h  corteo.h  corteo_interp.h  corteo_xs.h  dedx.cpp  dedx.h  dedx_calc.cpp  dedx_calc.h  elements.cpp  event_stream.cpp  event_stream.h  flight_path_calc.cpp  gencorteo.cpp  gendedx.cpp  genptable.cpp  geometry.h  h5serialize.cpp  ion.cpp  ion.h  ion_beam.cpp  ion_beam.h  iradina.cpp  json_defs_p.h  main.cpp  mccore.cpp  mccore.h  mcdriver.cpp  mcdriver.h  out_file.cpp  parse_json.cpp  periodic_table.h  play_ground.cpp  random_vars.h  straggling.cpp  tally.cpp  tally.h  target.cpp  target.h  xs.h
src/gui/: CMakeLists.txt  error_fmt.h  floatlineedit.cpp  floatlineedit.h  ionsui.cpp  ionsui.h  ionsui.qrc  main.cpp  mainui.cpp  mainui.h  materialsdefview.cpp  materialsdefview.h  mcdriverobj.cpp  mcdriverobj.h  mydatawidgetmapper.cpp  mydatawidgetmapper.h  optionsmodel.cpp  optionsmodel.h  periodictable.cpp  periodictable.h  periodictablewidget.cpp  periodictablewidget.h  regionsview.cpp  regionsview.h  resultsview.cpp  resultsview.h  runview.cpp  runview.h  simcontrolwidget.cpp  simcontrolwidget.h  simulationoptionsview.cpp  simulationoptionsview.h  targetgeometryview.cpp  targetgeometryview.h  welcomeview.cpp  welcomeview.h
src/gui/examples/: 1MeV_H_on_Fe.json  2MeV_Fe_on_Fe.json  3MeV_Xe_on_UO2.json
src/gui/jsedit/: jsedit.cpp
src/gui/option_def/: options.json
src/gui/qjsonpath/: qjsonpath.cpp
test/: README.md  very_short_instructions_iradina.md
test/icr/: README.md  icr1.m  icr2.m  icr3.m
test/ions/b1/: config.json
test/ions/b2/: config.json
test/ions/b3/: config.json
test/ions/b4/: config.json
test/ions/b5/: config.json
test/ions/b6/: config.json
test/ions/b7/: config.json
test/iradina++/b1/: Configuration.in  b1.exit.h5  b1.h5  config.json
test/iradina++/b2/: config.json
test/iradina++/b3/: b3.exit.h5  b3.h5  config.json
test/iradina++/b4/: b4.exit.h5  b4.h5  config.json
test/iradina++/b5/: b5.exit.h5  b5.h5  config.json
test/iradina++/b6/: b6.exit.h5  b6.h5  config.json
test/iradina++/b7/: b7.exit.h5  b7.h5  (+1 more)
test/octave/: compare_mnlVsFC.m  dam_ener.m  energ.m  impl.m  ioniz.m  lin_test.m  load_files.m  mcs_mcnp.m  msc_MW_H_C.m  msc_MW_H_C_CompAll.m  msc_MW_H_C_CompAll_select.m  msc_MW_He_C.m  msc_MW_He_C_CompAll.m  msc_MW_He_C_CompAll_select.m  phon.m  pka_f.m  plot3D_ranges.m  plotCompareAll_Srim.m  plotCompareSrim_msc.m  plot_b2.m  plot_b7.m  plot_benchmark.m  plot_compare_all.m  plot_compare_iradina.m  print2png.m  replamnts.m  srim2mat.m  table_compare_all.m  vacan.m
test/srim/: FeInFe.py  HinFe.py  XeInUO2.py  docker_run  docker_run_ml
(+285 files in other folders)
